feat(recipes): migrate businessKey to businessId in start-process methods
MigrateStartProcessInstanceMethodsRecipe now rewrites the businessKey
argument of the simple startProcessInstanceByKey / startProcessInstanceById
overloads (with or without a variables map) into a .businessId(...) call on
the C8 newCreateInstanceCommand chain, instead of dropping it with a TODO.
The businessId placeholder matches any String expression, so string literals,
variable references and method-call results are all migrated.

ProcessInstantiationBuilder.businessKey() builder chains deliberately keep a
TODO rather than an automatic rewrite: businessId uniqueness enforcement is
opt-in in Camunda 8.9 and the semantics (unique constraint, retry idempotency)
may differ, so a human should review those. That TODO now also reminds the
migrator to migrate any businessKey propagated to a called process via
<camunda:in businessKey="..." /> on a BPMN call activity (diagram converter).

related to #1555

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>